--- a/home.html
+++ b/home.html
@@ -2,8 +2,7 @@
 if ($_POST['pass']) == 'hello'
 header['location:good.html']
 else
-header['location:error.html']
-
+echo not found
 ?>
 <html>
 <title>password</title>
