--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@ echo not found
 ?>
 <html>
 <title>password</title>
-<form action=home.php method=post>
+<form action=home.html method=post>
 	<tr><td>
 	password:</td><td><input type=password name=pass>
 	</input></td></tr>
