--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 
 <html>
 <title>password</title>
-<form action=home.html method=post>
+<form action=pass.php method=post>
 	<tr><td>
 	password:</td><td><input type=password name=pass>
 	</input></td></tr>
